Kernel warning intel_ddi_level when HDMI in use
When I have a monitor connected to HDMI port I get the following warning:
[ 1.543793] i915 0000:00:02.0: drm_WARN_ON_ONCE(level >= n_entries)
[ 1.543816] WARNING: CPU: 0 PID: 668 at drivers/gpu/drm/i915/display/intel_ddi.c:1441 intel_ddi_level+0x19d/0x1b0
[ 1.543832] Modules linked in:
[ 1.543836] CPU: 0 PID: 668 Comm: kworker/u8:3 Not tainted 6.5.5 #6
[ 1.543843] Hardware name: HP HP Pavilion Notebook /8093, BIOS F.91 08/20/2019
[ 1.543846] Workqueue: events_unbound async_run_entry_fn
[ 1.543857] RIP: 0010:intel_ddi_level+0x19d/0x1b0
[ 1.543865] Code: 48 8b 5f 50 48 85 db 75 03 48 8b 1f e8 7c d8 04 00 48 c7 c1 d8 a6 40 98 48 89 da 48 c7 c7 24 ae 37 98 48 89 c6 e8 c3 fc a1 ff <0f> 0b 8b 54 24 04 e9 71 ff ff ff 0f 1f 84 00 00 00 00 00 90 90 90
[ 1.543870] RSP: 0000:ffffb25e80f57868 EFLAGS: 00010292
[ 1.543875] RAX: 0000000000000037 RBX: ffffa21800b48e50 RCX: 00000000fffff219
[ 1.543878] RDX: 0000000000000000 RSI: 0000000000000002 RDI: 0000000000000001
[ 1.543881] RBP: 0000000000000000 R08: 000000000000064b R09: 0000000098cbf2ea
[ 1.543884] R10: ffffffffffffffff R11: 0000000000000001 R12: ffffa218020f8000
[ 1.543887] R13: ffffa21801ee4000 R14: ffffffff980a3ed0 R15: ffffa218020d0000
[ 1.543890] FS: 0000000000000000(0000) GS:ffffa21956c00000(0000) knlGS:0000000000000000
[ 1.543894] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[ 1.543897] CR2: ffffa2195efff000 CR3: 000000000e62a001 CR4: 00000000003706f0
[ 1.543900] Call Trace:
[ 1.543904] <TASK>
[ 1.543906] ? __warn+0x6b/0xd0
[ 1.543918] ? intel_ddi_level+0x19d/0x1b0
[ 1.543924] ? report_bug+0x147/0x190
[ 1.543932] ? handle_bug+0x3a/0x70
[ 1.543942] ? exc_invalid_op+0x13/0x60
[ 1.543950] ? asm_exc_invalid_op+0x16/0x20
[ 1.543962] ? intel_ddi_level+0x19d/0x1b0
[ 1.543967] ? intel_ddi_level+0x19d/0x1b0
[ 1.543973] intel_enable_ddi+0x3d4/0x940
[ 1.543980] intel_encoders_enable+0x6d/0x90
[ 1.543991] hsw_crtc_enable+0x1ba/0x640
[ 1.543998] intel_enable_crtc+0x55/0x90
[ 1.544008] intel_commit_modeset_enables+0x40/0x70
[ 1.544016] intel_atomic_commit_tail+0x639/0xda0
[ 1.544023] intel_atomic_commit+0x320/0x360
[ 1.544031] drm_atomic_commit+0x81/0xa0
[ 1.544041] ? __pfx___drm_printfn_info+0x10/0x10
[ 1.544052] drm_client_modeset_commit_atomic+0x1b4/0x1f0
[ 1.544062] drm_client_modeset_commit_locked+0x51/0x150
[ 1.544071] drm_client_modeset_commit+0x1c/0x40
[ 1.544079] __drm_fb_helper_restore_fbdev_mode_unlocked+0x80/0xc0
[ 1.544086] drm_fb_helper_set_par+0x26/0x40
[ 1.544090] intel_fbdev_set_par+0x11/0x60
[ 1.544099] ? con_is_visible+0x26/0x50
[ 1.544107] fbcon_init+0x24d/0x5f0
[ 1.544116] visual_init+0xc7/0x120
[ 1.544124] do_bind_con_driver.isra.0+0x196/0x3b0
[ 1.544135] do_take_over_console+0x14e/0x190
[ 1.544144] do_fbcon_takeover+0x54/0xb0
[ 1.544152] fbcon_fb_registered+0x1bf/0x1d0
[ 1.544160] ? fb_add_videomode+0x73/0xe0
[ 1.544166] register_framebuffer+0x1b0/0x290
[ 1.544175] __drm_fb_helper_initial_config_and_unlock+0x30b/0x4b0
[ 1.544186] intel_fbdev_initial_config+0x9/0x20
[ 1.544195] async_run_entry_fn+0x21/0xa0
[ 1.544202] process_one_work+0x1bf/0x340
[ 1.544211] worker_thread+0x46/0x3b0
[ 1.544219] ? __pfx_worker_thread+0x10/0x10
[ 1.544227] kthread+0xdf/0x110
[ 1.544232] ? __pfx_kthread+0x10/0x10
[ 1.544237] ret_from_fork+0x2b/0x40
[ 1.544245] ? __pfx_kthread+0x10/0x10
[ 1.544250] ret_from_fork_asm+0x1b/0x30
[ 1.544256] </TASK>
[ 1.544258] ---[ end trace 0000000000000000 ]---
The Kernel is 6.5.5 the system is LFS/BLFS 12.0
Is this important I know this machine has MTRR problems but I don't think this issue is related.
Thanks